# PaperDisplayHomeAssistant

./: README.md
display_server/: config.py  main.py  pyproject.toml  requirements.txt
display_server/controller/: display_controller.py  settings_controller.py
display_server/display/: display_contr.py
display_server/examples/: epd_5in65f_test.py  epd_5in65f_test.py.save
display_server/routers/: display.py  settings.py
display_server/templates/: display.html  index.html  settings.html  success.html
