[tool.poetry]
name = "display-server"
version = "0.1.0"
description = ""
authors = ["Felix Marschall <felix.marschall@student.kit.edu>"]
readme = "README.md"
packages = [{include = "display_server"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "display_server.main:start"